--- a/index.html
+++ b/index.html
@@ -164,5 +164,9 @@
     <script type="module" src="src/ui/UIManager.js"></script>
     <script type="module" src="src/utils/MathUtils.js"></script>
     <script type="module" src="app.js"></script>
+    <script>
+        // Enable debug coordinates for testing
+        window.DEBUG_COORDINATES = true;
+    </script>
 </body>
 </html>
