We lost it, going to revert to a previous commit.

--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
     </div>
 
     <!-- JavaScript Modules -->
-    <script type="module" src="src/core/MemoryManager.js"></script>
     <script type="module" src="src/core/BlockDataManager.js"></script>
+    <script type="module" src="src/utils/CoordinateSystem.js"></script>
     <script type="module" src="src/core/AppStateManager.js"></script>
     <script type="module" src="src/rendering/BaseRenderer.js"></script>
     <script type="module" src="src/rendering/TopViewRenderer.js"></script>
